Fixed command dispatching and argument parsing